--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <button id="reset-button">Reset</button>
 <br><br>
 
-<section class="pi">
-<div class="draw">
-<svg width="900" height="900" viewBox="-100 -100 200 200" xmlns="http://www.w3.org/2000/svg" id="svg-draw">
+<svg width="800" height="800" viewBox="-100 -100 200 200" xmlns="http://www.w3.org/2000/svg" id="svg-draw">
     <rect x="-100" y="-100" width="100" height="100" fill="transparent" stroke="black" stroke-width="0.2"></rect>
     <circle r="50" cx="-50" cy="-50" fill="transparent" stroke="black" stroke-width="0.2"></circle>
     <text x="10" y="-95" style="font-size: 5pt">Darts</text>
@@ -21,18 +19,15 @@
     <text x="10" y="-70" style="font-size: 3pt">π ≈</text>
     <text id="pi" x="20" y="-70" style="font-size: 3pt">0</text>
 </svg>
-</div>
-<div class="results">
 
-</div>
-</section>
+<h2>Inspired by <a href="https://www.youtube.com/watch?v=5cNnf_7e92Q">The Coding Train</a></h2>
 
 <script type="text/javascript" src="script.js"></script>
 <script>
-var button = document.querySelector("#start-button");
-button.addEventListener('click', start);
-var reset_button = document.querySelector("#reset-button");
-reset_button.addEventListener('click', reset);
-reset_button.disabled = true;
+    var button = document.querySelector("#start-button");
+    button.addEventListener('click', start);
+    var reset_button = document.querySelector("#reset-button");
+    reset_button.addEventListener('click', reset);
+    reset_button.disabled = true;
 </script>
 </body>
